--- a/quarkus-openapi-demo/src/main/resources/application.properties
+++ b/quarkus-openapi-demo/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## Database configuration
-quarkus.datasource.jdbc.url=jdbc:h2:file:./data/todos
+%dev.quarkus.datasource.jdbc.url=jdbc:h2:file:./data/todos
+quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/./todos
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
@@ -20,7 +21,7 @@ mp.openapi.extensions.smallrye.info.version=1.0.1
 mp.openapi.extensions.smallrye.info.description=Just an simple ToDo API
 mp.openapi.extensions.smallrye.info.termsOfService=Your terms here
 mp.openapi.extensions.smallrye.info.contact.email=techsupport@example.com
-mp.openapi.extensions.  smallrye.info.contact.name=Todo API Support
+mp.openapi.extensions.smallrye.info.contact.name=Todo API Support
 mp.openapi.extensions.smallrye.info.contact.url=http://exampleurl.com/contact
 mp.openapi.extensions.smallrye.info.license.name=Apache 2.0
 mp.openapi.extensions.smallrye.info.license.url=https://www.apache.org/licenses/LICENSE-2.0.html
