Add additional examples

--- a/quarkus-openapi-demo/src/main/resources/application.properties
+++ b/quarkus-openapi-demo/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 ## Database configuration
-%dev.quarkus.datasource.jdbc.url=jdbc:h2:file:./data/todos
-quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/./todos
+quarkus.datasource.jdbc.url=jdbc:h2:file:./data/todos
+%prod.quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/./todos
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
+%prod.quarkus.hibernate-orm.database.generation=update
+
 quarkus.hibernate-orm.log.sql=true
 
 quarkus.package.type=uber-jar
