Add property configuration examples

--- a/quarkus-mp-config-demo/src/main/resources/application.properties
+++ b/quarkus-mp-config-demo/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 quarkus.http.port=7080
 
-demo.message=Hi World
-
 quarkus.log.level=INFO
-quarkus.log.category."demo".level=DEBUG
+quarkus.log.category."demo".level=INFO
+
+%test.demo.message=Hello World
+%prod.demo.message=Greetings World
+demo.message=Huhu World
